@@ -7,6 +7,13 @@ Sources
 
 Releases
 {
+  v8r8-pre7
+  {
+    Modules = LHCbDIRAC:v8r8-pre7, LHCbWebDIRAC:v4r3p2
+    Depends = DIRAC:v6r17p20
+    LcgVer = 2017-05-22
+  }
+
   v8r8-pre6
   {
     Modules = LHCbDIRAC:v8r8-pre6, LHCbWebDIRAC:v4r3p2
