@@ -1,12 +1,12 @@
 {
   "name": "LHCbDirac",
-  "version": "v8r8-pre6",
+  "version": "v8r8-pre7",
   "used_projects": {
     "project": [
       [ "Dirac", "v6r17p20",
         [ "bin", "python", "lib" ]
       ],
-      [ "LHCbGrid", "v11r7",
+      [ "LHCbGrid", "v11r8",
         [ "bin", "python", "lib" ]
       ]
     ]
